tests/fixtures/invalid/pow_dict_int_str.py
# Cannot call pow() with Dict[str, int], Int, Str
x = pow({"a": 1}, 1, "hello")
